fix create database

--- a/home/linux/roles/database/tasks/main.yml
+++ b/home/linux/roles/database/tasks/main.yml
@@ -15,6 +15,7 @@
 - name: Create mail databases
   mysql_db:
     name: "{{ item }}"
+    login_unix_socket: /run/mysqld/mysqld.sock
     state: present
   loop:
     - "{{ mail_db }}"
